добавил стили для блока с видео

--- a/src/style/blocks/main/_index.scss
+++ b/src/style/blocks/main/_index.scss
@@ -1,6 +1,7 @@
 @import "hero";
 @import "shield";
 @import "get-profit";
+@import "about-us";
 @import "profit-advantages";
 @import "for-whom";
 @import "whom-item";
